<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dip"
    android:clickable="true" >

    <ImageView
        android:id="@+id/imgPrinter"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:contentDescription="@string/printer"
        android:src="@drawable/printer_icon" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@id/imgPrinter"
        android:orientation="vertical"
        android:paddingLeft="10sp" >

        <TextView
            android:id="@+id/tvPrinterTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPrinterLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_location"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>